--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     {% block title %}
     
     {% endblock %}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bulma/bulma.css')}}"/>
 </head>
 <body>
     {% block nav %}
