--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,14 @@
 {% endblock %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
     <h1>{{title}}</h1>
 {% endblock %}
