--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,12 @@
     <div class="container-fluid">
         <section>
             {% block nav %}
-
+            <nav class="navbar navbar-light bg-light">
+                <form class="form-inline" method="get" action="{{url_for('results')}}">
+                  <input type="text" name="qt" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </nav>
             {% endblock %}
         </section>
         <section>
