--- a/static/sass/modules/_recipie.sass
+++ b/static/sass/modules/_recipie.sass
@@ -4,6 +4,8 @@
     @include make-col(4)
     a
         color: white
+    .action-button
+        @include make-col(12)
 #main_content
     @include make-col(8)
     .twocol-split
