--- a/templates/recipie.html
+++ b/templates/recipie.html
@@ -22,6 +22,8 @@
                     {{recipie['recipie_instructions']}}
                 {% endautoescape %}
             </div>
+            <small>Created On {{createdDate}}</small></br>
+            <small>Last Updated On {{updatedDate}}</small>
         </div>
     </div>
     <div id="side_content">
