--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1356,32 +1356,67 @@ html {
 
   .align-self-xl-stretch {
     align-self: stretch !important; } }
-h2 {
-  color: #ffffff; }
-
 .result-hits {
-  flex: 0 0 66.6666666667%;
-  max-width: 66.6666666667%;
-  background-color: red; }
+  flex: 0 0 79.1666666667%;
+  max-width: 79.1666666667%; }
+@media(max-width: 980px) {
+  .result-hits {
+    flex: 0 0 100%;
+    max-width: 100%; } }
+@media(min-width: 1024px) {
+  .result-hits {
+    flex: 0 0 62.5%;
+    max-width: 62.5%; } }
   .result-hits .result-hit {
-    background-color: white;
-    margin: 25px; }
+    margin-bottom: 25px;
+    margin-left: 5px;
+    background-color: #c0c0c0; }
     .result-hits .result-hit h4 {
       color: black;
-      border-bottom: 3px solid black; }
+      border-bottom: 3px solid black;
+      margin-bottom: 0; }
+    .result-hits .result-hit main {
+      background-color: #e6e6e6;
+      padding: 15px; }
     .result-hits .result-hit footer {
-      border-top: 3px solid black; }
+      border-top: 3px solid black;
+      color: #FFF; }
       .result-hits .result-hit footer .pull-right {
         float: right; }
 
 .results-facets {
-  flex: 0 0 33.3333333333%;
-  max-width: 33.3333333333%;
-  background-color: green;
-  color: #ffffff;
+  flex: 0 0 20.8333333333%;
+  max-width: 20.8333333333%;
+  color: #000;
   font-weight: bold; }
+@media(max-width: 980px) {
+  .results-facets {
+    flex: 0 0 100%;
+    max-width: 100%; }
+    .results-facets .form-check {
+      padding-left: 0; }
+      .results-facets .form-check h2 {
+        margin-bottom: 0; } }
+@media(min-width: 1024px) {
+  .results-facets {
+    flex: 0 0 29.1666666667%;
+    max-width: 29.1666666667%; }
+    .results-facets .form-check {
+      padding-left: 0; } }
   .results-facets h3 {
-    color: #FFF; }
+    color: #FFF;
+    text-align: center;
+    background-color: #808080;
+    margin-bottom: 0; }
+    .results-facets h3:first {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px; }
+  .results-facets .facet div {
+    background-color: #f0f0f0;
+    border: 2px solid #c0c0c0; }
+  .results-facets .submit_filter_button {
+    border-radius: 0;
+    width: 100%; }
 
 #content {
   display: flex; }
