--- a/static/sass/modules/_results.sass
+++ b/static/sass/modules/_results.sass
@@ -1,23 +1,56 @@
-h2
-    color: #ffffff
 .result-hits
-    @include make-col(8)
-    background-color: red
+    @media(max-width: 980px)
+        @include make-col(12)
+    @media(min-width: 1024px)
+        @include make-col(7.5)
+    @include make-col(9.5)
     .result-hit
-        background-color: white
-        margin: 25px
+        margin-bottom: 25px
+        margin-left: 5px
+        background-color: #c0c0c0
         h4
             color: black
             border-bottom: 3px solid black
+            margin-bottom: 0
+        main
+            background-color: lighten(#c0c0c0, 15%)
+            padding: 15px
         footer
             border-top: 3px solid black
+            color: #FFF
             .pull-right
                 float: right
             
 .results-facets
-    @include make-col(4)
-    background-color: green
-    color: #ffffff
+    @media(max-width: 980px)
+        @include make-col(12)
+        .form-check
+            padding-left: 0
+            h2
+                margin-bottom: 0
+    @media(min-width: 1024px)
+        @include make-col(3.5)
+        .form-check
+            padding-left: 0
+        
+
+    @include make-col(2.5)
+    color: #000
     font-weight: bold
     h3
         color: #FFF
+        text-align: center
+        background-color: #808080
+        margin-bottom: 0
+        &:first 
+            border-top-left-radius: 10px
+            border-top-right-radius: 10px
+    .facet div
+        background-color: #f0f0f0
+        border: 2px solid #c0c0c0
+    .submit_filter_button
+        border-radius: 0
+        width: 100%
+
+
+    
