--- a/templates/results.html
+++ b/templates/results.html
@@ -2,9 +2,10 @@
 {% block content %}
 <div class="row">
     <div class="results-facets">
-        <h2 class="text-center">Filter your results:</h2>
+        
         <form method="GET" action="{{url_for('results')}}">
             <div class="form-check">
+                <h2 class="text-center">Filter your results:</h2>
                 <div class="facet">
                     <h3 data-toggle="collapse" data-target="#filter_allergin_body">Allergins&nbsp;<i class="fa fa-chevron-down"></i></h3>
                     <div id="filter_allergin_body" class="collapse">
@@ -18,7 +19,7 @@
                     </div>
                 </div>
                 <input type="hidden" name="qt" value="{{currentQueryTerm}}"/>
-                <input class="btn btn-success" type="submit" value="Filter my Results"/>
+                <input class="btn btn-success submit_filter_button" type="submit" value="Filter my Results"/>
             </div>
         </form>
     </div>
