--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,29 @@
     <div class="container-fluid">
         <section>
             {% block nav %}
-            <nav class="navbar navbar-light bg-light">
-                <form class="form-inline" method="get" action="{{url_for('results')}}">
-                  <input type="text" name="qt" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-              </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+                <a class="navbar-brand">Recipie Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('index')}}">Home Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('form')}}">Add a new recipie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('stats')}}">Statistics</a>
+                        </li>
+                   </ul>
+                   <form class="form-inline my-2 my-lg-0" method="get" action="{{url_for('results')}}">
+                        <input type="text" name="qt" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
             {% endblock %}
         </section>
         <section>
