--- a/templates/results.html
+++ b/templates/results.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+<title>{{title}}</title>
+{% endblock %}
 {% block content %}
 <div class="row">
     <div class="results-facets">
