--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+<title>{{title}}</title>
+{% endblock %}
 {% block content %}
 
 <div id="chart"></div>
