--- a/templates/form.html
+++ b/templates/form.html
@@ -61,6 +61,16 @@
                         <option value="Hard" {% if diff == 'Hard' %} selected="selected" {% endif %}>Hard</option>
                     </select>
                 </div>
+                <div class="select-group">
+                    <label class="label" for="recipie_mealtype">What is this meal intended for?</label>
+                    {% set diff = recipie['recipie_mealtype'] %}
+                    <select name="recipie_mealtype" id="recipie_mealtype">
+                        <option value=''>Please Select..</option>
+                        <option value="Breakfast" {% if diff == 'Breakfast' %} selected="selected" {% endif %}>Breakfast</option>
+                        <option value="Lunch" {% if diff == 'Lunch' %} selected="selected" {% endif %}>Lunch</option>
+                        <option value="Dinner" {% if diff == 'Dinner' %} selected="selected" {% endif %}>Dinner</option>
+                    </select>
+                </div>
                 <div class="form-group">
                     {% set c_date  = recipie['createdDate'] %}
                     {% if c_date == null  %}
