--- a/templates/recipie.html
+++ b/templates/recipie.html
@@ -25,21 +25,21 @@
                     {{recipie['recipie_instructions']}}
                 {% endautoescape %}
             </div>
-            <small>Created On {{createdDate}}</small></br>
+            <small>Created On {{createdDate}}</small><br/>
             {% if updatedDate != None %}
             <small>Last Updated On {{updatedDate}}</small>
             {% endif %}
         </div>
     </div>
     <div id="side_content">
-        <a id="like_button" class="btn btn-success action-button" data-id="{{recipie['_id']}}"><i class="fas fa-thumbs-up"></i>Like ({% if recipie['likes'] is defined %} <span id="l_count">{{recipie['likes']}}</span> {% else %} <span id="l_count">0</span> {% endif %})</span></a>
+        <a id="like_button" class="btn btn-success action-button" data-id="{{recipie['_id']}}"><i class="fas fa-thumbs-up"></i>Like ({% if recipie['likes'] is defined %} <span id="l_count">{{recipie['likes']}}</span> {% else %} <span id="l_count">0</span> {% endif %})</a>
         <a id="dislike_button" class="btn btn-danger action-button" data-id="{{recipie['_id']}}"><i class="fas fa-thumbs-down"></i>Dislike ({% if recipie['dislikes'] is defined %} <span id="d_count">{{recipie['dislikes']}}</span> {% else %} <span id="d_count">0</span> {% endif %})</a>
         <a class="btn btn-info action-button" href="{{url_for('form', id=recipie['_id'], edit=1)}}" title="Edit {{recipie[recipie_title]}}">Edit this recipie</a>
     </div>
 </div>
 {% endblock %}
 {% block page_scripts %}
-<script type="text/javascript">
+<script>
 $(document).ready(function(e){
     var l_width = getlargestwidth('.action-button');
     $('.action-button').each(function(){
