--- a/static/sass/modules/_results.sass
+++ b/static/sass/modules/_results.sass
@@ -12,7 +12,7 @@
             color: black
             border-bottom: 3px solid black
             margin-bottom: 0
-        main
+        .hit-main
             background-color: lighten(#c0c0c0, 15%)
             padding: 15px
         footer
