--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <div class="container-fluid">
-        <section>
             {% block nav %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
                 <a class="navbar-brand">Recipie Home</a>
@@ -34,18 +33,18 @@
                         </li>
                    </ul>
                    <form class="form-inline my-2 my-lg-0" method="get" action="{{url_for('results')}}">
-                        <input type="text" name="qt" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <input type="text" name="qt" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
             </nav>
             {% endblock %}
-        </section>
-        <section>
+        
+        
             {% block content %}
 
             {% endblock %}
-        </section>
+        
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
