--- a/static/sass/modules/_results.sass
+++ b/static/sass/modules/_results.sass
@@ -42,7 +42,7 @@
         text-align: center
         background-color: #808080
         margin-bottom: 0
-        &:first 
+        &:first-of-type
             border-top-left-radius: 10px
             border-top-right-radius: 10px
     .facet div
