--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,11 @@
     <div class="card-wrapper">
       <div class="card">
         <div class="card-body">
-          {{r.recipie_title}}
-          <br/>
-          {{r.likes}} Likes
-          <br/>
+          <h5 class="card-title">{{r.recipie_title}}</h5>
+          <h6 class="card-subtitle text-muted">{{r.likes}} Likes</h6>
           <a href="{{url_for('recipie', id=r._id)}}" class="btn btn-info">View Recipie</a>
-                              
+          <br/>
+          <small>See full recipie for allergin details</small>                   
         </div>
       </div>
     </div>
