--- a/templates/base.html
+++ b/templates/base.html
@@ -14,40 +14,60 @@
 </head>
 <body>
     <div class="container-fluid">
-            {% block nav %}
-            <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-                <a class="navbar-brand">Recipie Home</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('index')}}">Home Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('form')}}">Add a new recipie</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('stats')}}">Statistics</a>
-                        </li>
-                   </ul>
-                   <form class="form-inline my-2 my-lg-0" method="get" action="{{url_for('results')}}">
-                        <input type="text" name="qt" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-            </nav>
-            {% endblock %}
-        
-        
-            {% block content %}
+        {% block flash_message %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}    
+                    {% for category, message in messages %}
+                        {% if category == 'success' %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>{{message}}</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% elif category == 'error' %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <strong>{{message}}</strong>
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        {% endblock %}
+        {% block nav %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+            <a class="navbar-brand">Recipie Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('index')}}">Home Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('form')}}">Add a new recipie</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-info my-2 my-sm-0" href="{{url_for('stats')}}">Statistics</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0" method="get" action="{{url_for('results')}}">
+                    <input type="text" name="qt" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        {% endblock %}
+        {% block content %}
 
-            {% endblock %}
+        {% endblock %}
         
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {% block page_scripts %} {% endblock %}
