--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,7 @@
                 <h2 class="text-center">Filter your results:</h2>
                 <div class="facet">
                     <h3 data-toggle="collapse" data-target="#filter_allergin_body">Allergins&nbsp;<i class="fa fa-chevron-down"></i></h3>
-                    <div id="filter_allergin_body" class="collapse">
+                    <div id="filter_allergin_body" class="in collapse show">
                         {% for key, value in allerginList.items() %}
                         <label>
                             <input type="checkbox" name="allergin" value="{{key}}" {% if value == '1' %} checked="checked" {% endif %}/>
